--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/breadcrumb-bg.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/taxiImg.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
